# astro

./: .gitignore  Cargo.toml  README.md  extension.toml
.github/workflows/: bump_version.yml  run_tests.yml
languages/astro/: brackets.scm  config.toml  highlights.scm  injections.scm
src/: astro.rs
